--- a/assistant/domain.yml
+++ b/assistant/domain.yml
@@ -23,7 +23,7 @@ slots:
   user_profile:
     type: unfeaturized
   user_name:
-    type: unfeaturized  
+    type: unfeaturized
   confirm:
     type: unfeaturized
   incident_title:
@@ -32,6 +32,9 @@ slots:
     type: unfeaturized
   problem_description:
     type: unfeaturized
+  requested_slot:
+    type: text
+
 
 responses:
   utter_out_of_scope:
@@ -71,7 +74,7 @@ responses:
   utter_ask_confirm:
   - text: "Should I open an incident with the following details?
           \n    Title: {incident_title}
-          \n    Description: {problem_description}          
+          \n    Description: {problem_description}
           \n    Priority: {priority}"
     buttons:
     - title: Yes
@@ -83,7 +86,7 @@ responses:
   utter_ask_whatelse:
     - text: What else can I help you with?
   utter_explain_priority:
-    - text: "Priority is being requested by IT help desk team to triage your incident. Type 'low', or 'medium', or 'high'"  
+    - text: "Priority is being requested by IT help desk team to triage your incident. Type 'low', or 'medium', or 'high'"
 
 forms:
 - open_incident_form
